# connectx

./: .gitignore  CMakeLists.txt  Makefile  README.md  Rules.mk  backlog.md  deprecated.list  main.cpp  wishlist  wishlist.md
connectx/: CMakeLists.txt  Rules.mk  main.cpp  ressources.h.in
cxexec/: CMakeLists.txt  Rules.mk  cx.dox
cxexec/include/: Application.h  CmdArgHelpStrategy.h  CmdArgInvalidStrategy.h  CmdArgMainStrategy.h  CmdArgVerboseStrategy.h  CmdArgVersionStrategy.h  CmdArgWorkflowFactory.h  GtkmmUIManager.h
cxexec/src/: Application.cpp  CmdArgHelpStrategy.cpp  CmdArgInvalidStrategy.cpp  CmdArgMainStrategy.cpp  CmdArgNoStrategy.cpp  CmdArgVerboseStrategy.cpp  CmdArgVersionStrategy.cpp  CmdArgWorkflowFactory.cpp  GtkmmUIManager.cpp
cxexec/test/: ApplicationTestFixture.cpp  ApplicationTestFixture.h  ApplicationTests.cpp  CMakeLists.txt  CmdArgStrategyTests.cpp  LoggerMock.h  ModelMock.cpp  ModelMock.h  Rules.mk
cxgui/: CMakeLists.txt  Rules.mk  cxgui.dox
cxgui/include/: About.h  AboutWindowPresenter.h  AnimatedBoard.h  AnimatedBoardModel.h  AnimatedBoardPresenter.h  Board.h  BoardAnimation.h  BoardAnimationNotificationContext.h  BoardElementCache.h  Chip.h  ColorComboBox.h  Dimensions.h  DiscChip.h  GameCtrlZKeyHandlerStrategy.h  GameDownKeyHandlerStrategy.h  GameKeyHandlerStrategyFactory.h  GameLeftKeyHandlerStrategy.h  GameResolutionDialog.h  GameResolutionDialogController.h  GameResolutionDialogPresenter.h  GameRightKeyHandlerStrategy.h  GameView.h  GameViewDownKeyHandlerStrategy.h  GameViewKeyHandlerStrategyFactory.h  GameViewRightKeyHandlerStrategy.h  IAboutWindowPresenter.h  IAnimatedBoardModel.h  IAnimatedBoardPresenter.h  IBoardAnimator.h  IBoardInformation.h  IGameKeyHandlerStrategy.h  IGameResolutionDialogController.h  IGameResolutionDialogPresenter.h  IGameViewController.h  IGameViewKeyHandlerStrategy.h  IGameViewPresenter.h  IMainWindow.h  IMainWindowController.h  IMainWindowPresenter.h  INewGameViewController.h  (+19 more)
cxgui/src/: About.cpp  AboutWindowPresenter.cpp  AnimatedBoard.cpp  AnimatedBoardModel.cpp  AnimatedBoardPresenter.cpp  AnimatedBoardTimerRAII.cpp  Board.cpp  BoardElementCache.cpp  Chip.cpp  ColorComboBox.cpp  ContextRestoreRAII.cpp  Dimensions.cpp  DiscChip.cpp  FrameAnimationStrategy.cpp  GameCtrlZKeyHandlerStrategy.cpp  GameDownKeyHandlerStrategy.cpp  GameKeyHandlerStrategyFactory.cpp  GameLeftKeyHandlerStrategy.cpp  GameResolutionDialog.cpp  GameResolutionDialogController.cpp  GameResolutionDialogPresenter.cpp  GameResolutionDialogPresenterFactory.cpp  GameRightKeyHandlerStrategy.cpp  GameView.cpp  GameViewDownKeyHandlerStrategy.cpp  GameViewKeyHandlerStrategyFactory.cpp  GameViewLeftKeyHandlerStrategy.cpp  GameViewRightKeyHandlerStrategy.cpp  Gtkmm3AboutWindow.cpp  Gtkmm3AnimatedBoard.cpp  Gtkmm3AnimatedBoardTimerRAII.cpp  Gtkmm3BoardElementCache.cpp  Gtkmm3Button.cpp  Gtkmm3Chip.cpp  Gtkmm3ColorPicker.cpp  Gtkmm3ContextRestoreRAII.cpp  Gtkmm3Dialog.cpp  Gtkmm3DiscChip.cpp  Gtkmm3EditBox.cpp  Gtkmm3GameResolutionDialog.cpp  (+34 more)
cxgui/test/: AboutWindowPresenterTestFixture.cpp  AboutWindowPresenterTestFixture.h  AboutWindowPresenterTests.cpp  AnimatedBoardModelMock.cpp  AnimatedBoardModelMock.h  AnimatedBoardModelTests.cpp  AnimatedBoardPresenterMock.cpp  AnimatedBoardPresenterMock.h  AnimatedBoardPresenterTests.cpp  AnimationInformationsTests.cpp  BasicConnectXGameInformationModelMock.h  BasicConnectXLimitsModelMock.h  CMakeLists.txt  ConfigurableMainWindowPresenterTestFixture.cpp  ConfigurableMainWindowPresenterTestFixture.h  DimensionsTests.cpp  FrameAnimationStrategyTests.cpp  GameKeyHandlerStrategyFactoryTests.cpp  GamePresenterTests.cpp  GameResolutionDialogControllerTestFixture.cpp  GameResolutionDialogControllerTestFixture.h  GameResolutionDialogControllerTests.cpp  GameResolutionDialogPresenterFactoryTests.cpp  GameResolutionDialogPresenterTests.cpp  GameViewPresenterTests.cpp  IAnimatedBoardModelTests.cpp  KeyboardShortcutTests.cpp  MainWindowControllerTestFixture.cpp  MainWindowControllerTestFixture.h  MainWindowControllerTests.cpp  MainWindowPresenterTestFixture.cpp  MainWindowPresenterTestFixture.h  MainWindowPresenterTests.cpp  MainWindowTests.cpp  MenuItemTests.cpp  ModelMock.cpp  ModelMock.h  ModelMockController.cpp  ModelMockController.h  ModelMockPresenter.cpp  (+16 more)
cxmodel/: CMakeLists.txt  Rules.mk  cxmodel.dox
cxmodel/include/: Board.h  ChipColor.h  Color.h  CommandCreateNewGame.h  CommandDropChip.h  CommandIncrementByOne.h  CommandReinitialize.h  CommandStack.h  Disc.h  GameInformation.h  HelloWorld.h  IBoard.h  IChip.h  ICommand.h  ICommandStack.h  IConnectXGameActions.h  IConnectXGameInformation.h  IConnectXLimits.h  IGameResolutionStrategy.h  IModel.h  IObserver.h  IUndoRedo.h  IVersioning.h  IVersionning.h  Model.h  ModelNotificationContext.h  NewGameInformation.h  NotificationContext.h  OS.h  Player.h  Status.h  StrongType.h  Subject.h  TieGameResolutionStrategy.h  WinGameResolutionStrategy.h  common.h  math.h
cxmodel/src/: Board.cpp  ChipColor.cpp  CommandCreateNewGame.cpp  CommandDropChip.cpp  CommandIncrementByOne.cpp  CommandReinitialize.cpp  CommandStack.cpp  CompositeCommand.cpp  Disc.cpp  GameResolutionStrategyFactory.cpp  HelloWorld.cpp  IBoard.cpp  IChip.cpp  INextDropColumnComputationStrategy.cpp  IPlayer.cpp  Model.cpp  NewGameInformation.cpp  OS.cpp  Player.cpp  Status.cpp  Subject.cpp  TieGameResolutionStrategy.cpp  WinGameResolutionStragegy.cpp  version.cpp.in
cxmodel/test/: BoardTests.cpp  CMakeLists.txt  ChipColorTests.cpp  ColorTests.cpp  CommandAddTwoMock.cpp  CommandAddTwoMock.h  CommandCreateNewGameTests.cpp  CommandDropChipTests.cpp  CommandStackMock.cpp  CommandStackMock.h  CommandStackTestFixture.cpp  CommandStackTestFixture.h  CommandStackTests.cpp  CommandTests.cpp  CommandTimesThreeMock.cpp  CommandTimesThreeMock.h  CompositeCommandTests.cpp  ConcreteObserverMock.cpp  ConcreteObserverMock.h  ConcreteSubjectMock.cpp  ConcreteSubjectMock.h  ConnectXLimitsModelMock.h  DisableStdStreamsRAII.h  DiscTests.cpp  IBoardTests.cpp  (+38 more)
cxstd/: CMakeLists.txt  cxstd.dox
prototypes/: CMakeLists.txt
(+443 files in other folders)
